# engspec_code

./: .gitignore  CONVENTIONS.md  PLAN.md  README.md  engspec_format.md  engspec_prompt.md  engspec_tester_prompt.md  engspec_to_code_prompt.md  engspec_trace_format.md  engspec_trace_prompt.md  engspec_verify_trace_prompt.md  pyproject.toml
.claude/commands/: engspec-regen.md  engspec-test.md  engspec.md
configs/: default.yaml
src/engspec_code/: __init__.py  _cli.py  config.py
src/engspec_code/agents/: base.py  regenerator.py  spec_filler.py  validator.py
src/engspec_code/callgraph/: builder.py  composition.py  graph.py
src/engspec_code/parser/: engspec_file.py  sync.py
src/engspec_code/pipeline/: create_input.py  process_input.py  swarm.py
src/engspec_code/prompts/: create_input.md  process_input.md  regenerator.md  spec_filler.md  validator.md
tests/: test_callgraph.py  test_engspec_file.py  test_pipeline.py  test_sync.py
tests/fixtures/: sample.engspec  sample.py  sample.rs  sample_input.md
tests/json_pointer/: expected_outcome.md  idea.md  pipeline.md  plan.md  plan.v2.md  rfc6901_vectors.md
tests/json_pointer/package/: call_graph.md  manifest.json  project_context.md  test_coverage.md
tests/json_pointer/package/non_code/: pyproject.toml
tests/json_pointer/package/specs/src/: __init__.py.engspec  exceptions.py.engspec  (+1 more)
tests/json_pointer/package/traces/: test_dash_index_rejected.trace.md  test_empty_pointer_returns_document.trace.md  test_escape_order_tilde_one_first.trace.md
tests/json_pointer/regen/tests/: test_resolve.py
(+4 files in other folders)
